# argon1d

./: Cargo.toml  README.md
openrc/: argon1d
src/: config.rs  fan.rs  main.rs  message.rs  thermal.rs
