[package]
name = "argon1d"
version = "0.1.0"
edition = "2021"
authors = ["Diego Sesmas Estrada <diegos7167@gmail.com>"]
license = "MIT"
description = "Argon ONE case control daemon"
publish = false

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
rppal = "0.15"
daemonize = "0.5"
signal-hook = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3"
toml = "0.8"
log = "0.4"
syslog = "6"
anyhow = "1"
